--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -22,7 +22,7 @@ Unlike the [Radio](/components/Radio) component or [Select](/components/Select) 
 
 Checkbox is commonly employed in forms to gather user input, granting them the ability to select zero or more options from a list.
 
-Keep the Checkbox component with direct labels and consistent styling (starting with capitalization and without ending in punctuation)
+Keep the checkbox label descriptive and concise: aim for no more than 3 words. Write labels in sentence case and without ending in punctuation.
 
 <DoDontContainer>
   <Do>
