--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -22,7 +22,7 @@ Unlike the [Radio](/components/Radio) component or [Select](/components/Select) 
 
 Checkbox is commonly employed in forms to gather user input, granting them the ability to select zero or more options from a list.
 
-Keep the checkbox label descriptive and concise: aim for no more than 3 words. Write labels in sentence case and without ending in punctuation.
+Checkbox labels should be descriptive and concise: aim for no more than 3 words. Write labels in sentence case. Examples: "Repository name", "Payment method".
 
 <DoDontContainer>
   <Do>
