update interface guidelines

--- a/apps/docs/content/components/Box/index.mdx
+++ b/apps/docs/content/components/Box/index.mdx
@@ -19,11 +19,23 @@ While it is highly customizable and can be used to create complex layouts, it is
 
 ### Padding
 
+Inner spacing is configurable on all sides or specific directions. Box utilises the CSS padding specification, using logical operators to aid bi-directional reading support.
+
+Additionally, fine-grained control over padding at specific viewports is available to ensure optimal, responsive layout on different screen sizes.
+
 ### Margin
+
+Outer spacing is also configurable on all sides or specific directions. Box utilises the CSS margin specification, similarly using logical operators to aid bi-directional reading support.
 
 ### Background colors
 
+Box enables first-class customisation of its background-color property. Options are limited to background-oriented, functional design tokens such as `default` and `subtle`, to ensure maximum color contrast with foreground text.
+
 ### Border
+
+Box offers various border customisations options, including configuration of `border-style`, `border-radius` and `border-colors`.
+
+In most cases, the available options corrospond to border-oriented design tokens available within the system. The exception is border style, which is limited to a subset of the official CSS `border-style` values.
 
 ## Accessibility
 
