--- a/apps/docs/content/components/Box/index.mdx
+++ b/apps/docs/content/components/Box/index.mdx
@@ -13,7 +13,7 @@ export default ComponentLayout
 
 The box component is a versatile layout component that is intended to simplify the process of adding one-off styles such as padding, margin, background color, and border to (or around) an element.
 
-It provides convenient and comprehensive access to Primer Brand's underlying Primitives, such as the spacing scale and functional design tokens for color and borders.
+The box provides convenient and comprehensive access to Primer Brand's underlying Primitives, such as the spacing scale and functional design tokens for color and borders.
 
 While it is highly customizable and can be used to create complex layouts, it is important to use it judiciously and only when necessary.
 
