--- a/apps/docs/content/components/Box/index.mdx
+++ b/apps/docs/content/components/Box/index.mdx
@@ -15,7 +15,7 @@ The box component is a versatile layout component that is intended to simplify t
 
 The box provides convenient and comprehensive access to Primer Brand's underlying Primitives, such as the spacing scale and functional design tokens for color and borders.
 
-While it is highly customizable and can be used to create complex layouts, it is important to use it judiciously and only when necessary.
+While the box component is highly customizable and can be used to create complex layouts, it is important to use it judiciously and only when necessary.
 
 ## Options
 
