final PR feedback

--- a/apps/docs/content/components/Box/index.mdx
+++ b/apps/docs/content/components/Box/index.mdx
@@ -7,8 +7,6 @@ import CustomVideoPlayer from '../../../src/components/custom-video-player'
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-![Three empty cards inside a grey background with rounded corners, which is also offset from the edge and including several annotations. First indicating distance between the background area and canvas edge to indicate margin controls. Second showing padding controls between the cards and background outer edge. Third pointing towards background color and lastly one pointing at the rounded corner to illustrate border radius options.](https://github.com/primer/brand/assets/13340707/211be3c8-0f33-47ba-8236-9b19780d2a86)
-
 ## Usage
 
 The box component is a versatile layout component that is intended to simplify the process of adding one-off styles such as padding, margin, background color, and border to (or around) an element.
@@ -48,3 +46,4 @@ Any interactive content within a box should be given their own appropriate acces
 ## Related components
 
 - [Stack](/components/Stack): to enable layout of its immediate children along the vertical or horizontal axis.
+- [Grid](/components/Grid): to create flexible and responsive grid-based layouts.
