Added Box component (#347)
* add Box component, storybook and docs

* add flexWrap to Stack

---------

Co-authored-by: Josep Martins <josepmartins@github.com>

--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -10,7 +10,7 @@ description: Use the river component to introduce a feature using a type and med
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-import {Box as Container, Label} from '@primer/react'
+import {Label} from '@primer/react'
 import {
   defaultRiverImageTextRatio,
   defaultRiverAlign,
