--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -12,7 +12,7 @@ export default ComponentLayout
 ![An image displaying a Radio with a radio and label.](https://github.com/primer/brand/assets/131988618/1b494cdb-4991-4fc9-beac-feb02b296cb9)
 
 - Radio: A selection control.
-- Radio Label: A description for the Radio. 
+- Label: A description for the Radio. 
 
 ## Usage
 
