--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -26,7 +26,7 @@ If you have a short list of options and want users to select only one, consider 
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/dff47404-e323-49d9-95f7-ab457a7195ef" />
     <Caption>
-        Ensure Radio options don't overlap and include "None" or "Other" options when necessary. 
+        Ensure radio options are are mutually exclusive. E.g. include "None" or "Other" options if necessary. 
     </Caption>
   </Do>
   <Dont>
