--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -20,8 +20,6 @@ Use the radio component to enable users to select a single option from a list.
 
 For scenarios that allow for multiple selections, use the [checkbox](/components/Checkbox) component instead. Keep the radio label descriptive and concise: aim for no more than 3 words. Write labels in sentence case and without ending in punctuation
 
-If you have a short list of options and want users to select only one, consider using a radio button in a radio group. A radio group is a collection of related radio buttons grouped together. It helps provide clear context and organization for the options.
-
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/dff47404-e323-49d9-95f7-ab457a7195ef" />
@@ -62,15 +60,15 @@ Radios have static dimensions and three different states when checked or uncheck
   src="https://user-images.githubusercontent.com/2313998/224133514-c583baf4-6dfc-444d-8714-dfc88cc00ff9.png"
 />
 
-### Accessibility 
-
-Please use [FormControl](/components/FormControl) to render a standard radio input field. If using standalone, it should always be accompanied by a corresponding `<label>` to improve support for assistive technologies.
-
 ## Options
 
 ### Caption
 
 A caption for a Radio can be useful in certain scenarios where additional information or clarification is needed for the Radio option. Some examples include complex or technical options, ambiguous or unclear options, legal or compliance requirements, or accessibility considerations.
+
+## Accessibility 
+
+Please use [FormControl](/components/FormControl) to render a standard radio input field. If using standalone, it should always be accompanied by a corresponding `<label>` to improve support for assistive technologies.
 
 ## Related components
 
