removing left and right values

--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -61,7 +61,7 @@ The text size ranges from 100 to 700, with 400 as the default size. This scale i
 
 Text alignment options offer a convenient way to control the positioning of content within block level elements.
 
-Available options include `start`, `center`, and `end`, which are recommended for supporting bidirectional reading. In situations where fixed alignment is needed irresepctive of reading direction, you can also utilize the `left` and `right` options.
+Available options include `start`, `center`, and `end`, which are recommended for supporting bidirectional reading.
 
 ### Weight
 
