--- a/apps/docs/content/components/Text/react.mdx
+++ b/apps/docs/content/components/Text/react.mdx
@@ -58,6 +58,24 @@ import {Text} from '@primer/react-brand'
 </>
 ```
 
+### Alignment
+
+Use `align` to set the horizontal alignment of content inside a block element.
+
+```jsx live
+<Stack direction="vertical">
+  <Text as="p" align="start">
+    Start
+  </Text>
+  <Text as="p" align="center">
+    Center
+  </Text>
+  <Text as="p" align="end">
+    End
+  </Text>
+</Stack>
+```
+
 ### Polymorphism
 
 The `Text` component can render as a `span`, `p` or `div` HTML element.
