add logo suite component

--- a/apps/docs/content/components/Box/react.mdx
+++ b/apps/docs/content/components/Box/react.mdx
@@ -316,7 +316,7 @@ All padding and margin options can be configured for indivisual viewports: Each 
 
 ## Component props
 
-### Text
+### Box
 
 | Name                | Type                                                                     |   Default   | Description                                                                 |
 | :------------------ | :----------------------------------------------------------------------- | :---------: | :-------------------------------------------------------------------------- |
