--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -438,5 +438,5 @@ Forwards all props from the [Text component](/components/Text), including `as`, 
 | :------------- | :------------------------------------------------------------------------ | :---------- | :------------------------------------------------ |
 | `children`     | <PropTableValues values={[`SVGElement`, `SVGElement[]`]} addLineBreaks /> | `undefined` | Logobar requires SVG elements to render correctly |
 | `marquee`      | `boolean`                                                                 | `false`     | Enables an optional marquee effect.               |
-| `marqueeSpeed` | <PropTableValues values={[`'slow'`, `'normal'`]} addLineBreaks />         | `'normal'`  | The speed of the marquee effect.                  |
-| `variant`      | <PropTableValues values={[`'muted'`, `'emphasis'`]} addLineBreaks />      | `'muted'`   | The stylistic variant of the LogoBar.             |
+| `marqueeSpeed` | <PropTableValues values={['slow', 'normal']} addLineBreaks />             | `'normal'`  | The speed of the marquee effect.                  |
+| `variant`      | <PropTableValues values={['muted', 'emphasis']} addLineBreaks />          | `'muted'`   | The stylistic variant of the LogoBar.             |
